data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2158.wast
;; 9. **Test Fail Condition in Block**: Design a block where the fail condition for `br_if` never triggers due to incorrect stack handling, ensuring infinite loop detection in one of the implementations.

(assert_invalid
  (module (func $infinite-loop-br-if (result i32)
    (loop (result i32)
      (i32.const 0)
      (br_if 0 (i32.const 1))
    )
  ))
  "infinite loop detection"
)